platform/kubernetes/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campuspulse
  namespace: campuspulse
  labels:
    app.kubernetes.io/name: campuspulse
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: campuspulse
  template:
    metadata:
      labels:
        app.kubernetes.io/name: campuspulse
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
        - name: campuspulse
          image: campuspulse:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
